# CMMS

./: .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  USAGE.md  config.json  config.json-example  docker-compose.yaml  manage.py  package-lock.json  package.json  pyproject.toml  scripts.py  server.js
.boilerplate/: Caddyfile  env
.github/workflows/: build.yml
Software/CMMS-master/public/: PPMForm.html  calendar.html  form2.html  installation.html
cmms/: apps.py  asgi.py  auth.py  constants.py  decorators.py  enums.py  events.py  forms.py  manage.py  menu.py  models.py  scalars.py  schema.py  settings.py  timer.py  urls.py  utils.py  views.py  wsgi.py
cmms/abstract/: menu.py  singleton.py  view.py
cmms/core/: asgi.py  menu.py  models.py  settings.py  urls.py  views.py  wsgi.py
cmms/migrations/: 0001_initial.py  0002_agent_alter_employee_avatar_alter_equipment_picture_and_more.py
cmms/static_src/: package-lock.json  tailwind.config.js
cmms/templates/: base.html  breadcrumbs.html  form.html  home.html  modal.html  setup.html  spinner.html
cmms/templatetags/: cmms_menu.py  cmms_modal.py
controllers/: add.js  delete.js  edit.js  home.js  report.js
models/: agent_supplier.js  break_down.js  clinical_engineer.js  department.js  dialy_inspection.js  equipment.js  maintenance.js  ppm.js  ppm_questions.js  spare_part.js  track_record.js  work_order.js
public/: CEcards.html  EQcards.html  PPM.html  SPcards.html  agentsupplier.html  breakdown.html  calendar.html  dailyinspection.html  department.html  home2.html  installationform.html  maintenance.html  workorder.html
public/css/: error.css
routes/: add.js  delete.js  edit.js  main.js  report.js
test/: sparepart.js
util/: db.js  path.js
views/: agentSupplier.handlebars  calender.handlebars  clinicalEngineer.handlebars  department.handlebars  editClinicalEngineer.handlebars  editEquipment.handlebars  editMaintenance.handlebars  equipment.handlebars  error.handlebars  home.handlebars  maintenance.handlebars  ppmForm.handlebars  reportDepartmentEngineers.handlebars  workOrder.handlebars
views/includes/: sidebar.handlebars
views/layouts/: agentReportLayout.handlebars  clinicalEngineerLayout.handlebars  departmentReportLayout.handlebars  equipmentReportLayout.handlebars  main-layout.handlebars
(+24 files in other folders)
